# circlebe/swagger/swagger-output.json
@@ -271,6 +271,24 @@
         ]
       }
     },
+    "/api/v1/thread/like": {
+      "post": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
     "/api/v1/auth/login": {
       "post": {
         "description": "",
